--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
 vscode:
   extensions:
     - dbaeumer.vscode-eslint@1.9.1:YVcwmzKVVl+zZ+wMB02GjQ==
+    - octref.vetur@0.22.4:F5isQXjXpm5hcM6ONMslcA==
